update login view

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -28,8 +28,7 @@
     ></script>
 
     {{#unless logged_in}}
-    <script src="/js/login.js"></script>
-    <script src="/js/signup.js"></script>
+    <script src="/scripts/login.js"></script>
     {{/unless}}
   </body>
 </html>
