--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,4 +1,5 @@
-<form>
+<h2>Login</h2>
+<form id="login">
   <div class="mb-3">
     <label for="login-username" class="d-none form-label">username</label>
     <input id="login-username" type="text" placeholder="username" class="form-control" />
