--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,5 +1,5 @@
+<h2>your dashboard</h2>
+<h4>your posts</h4>
 {{#each posts}}
   {{> post-item}}
 {{/each}}
-
-<h1>the dashboard melted but we still got the radio</h1>
