add post card conditional formatting

--- a/src/views/partials/post-item.handlebars
+++ b/src/views/partials/post-item.handlebars
@@ -1,9 +1,16 @@
 <div class="card m-3">
   <div class="card-body">
     <div class="d-flex align-items-center justify-content-between">
-      <h5 class="card-title">{{title}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{User.username}}
-        {{format_date created_at}}</h6>
+      <h5 class="card-title fs-3">{{title}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted">
+        {{#if User.username}}
+          {{User.username}}
+          @
+          {{format_date created_at}}
+        {{else}}
+          {{format_date created_at}}
+        {{/if}}
+      </h6>
     </div>
     <p class="card-text">{{content}}</p>
     <span>{{num_comments}} comments</span>
