--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,12 +1,6 @@
-<header class="container">
-  <div class="px-3 py-2 text-bg-dark">
-    <div>
-      <div
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
-      >
-        <h1 class="display-1">bob blog</h1>
-        {{> navbar}}
-      </div>
-    </div>
+<header class="px-3 py-2 text-bg-dark">
+  <div class="d-flex flex-wrap align-items-center justify-content-between">
+    <h1 class="display-1">bob blog</h1>
+    {{> navbar}}
   </div>
 </header>
