--- a/src/views/dashboard.handlebars
+++ b/src/views/dashboard.handlebars
@@ -1,7 +1,14 @@
 <section class="container flex-grow-1">
-  <h2 class="fs-1">your dashboard</h2>
-  <h4 class="fs-5">your posts</h4>
-  <div class="d-flex flex-column w-50">
+  <div class="d-flex">
+    <div>
+      <h2 class="fs-1">dashboard</h2>
+      <h4 class="fs-5">your posts</h4>
+    </div>
+  </div>
+  <div class="text-center">
+    <a href="/dashboard/new-post" class="btn btn-dark btn-lg">new post</a>
+  </div>
+  <div class="d-flex flex-column">
   {{#each posts}}
     {{> post-item}}
   {{/each}}
