--- a/src/views/partials/scripts.handlebars
+++ b/src/views/partials/scripts.handlebars
@@ -4,6 +4,7 @@
   integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
   crossorigin="anonymous"
 ></script>
+
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
   integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
@@ -12,14 +13,27 @@
 
 {{! app scripts }}
 
-{{#if page.signup}}
-  <script async defer src="/scripts/signup.js"></script>
+{{#if view.signup}}
+  <script async defer src="/scripts/auth/signup.js"></script>
 {{/if}}
 
-{{#if page.login}}
-  <script async defer src="/scripts/login.js"></script>
+{{#if view.login}}
+  <script async defer src="/scripts/auth/login.js"></script>
 {{/if}}
 
-{{#if page.logged_in}}
-  <script async defer src="/scripts/logout.js"></script>
+{{#if view.new_post}}
+  <script async defer src="/scripts/post/new.js"></script>
+{{/if}}
+
+{{#if logged_in}}
+  <script async defer src="/scripts/auth/logout.js"></script>
+
+  {{#if view.single_post}}
+    <script async defer src="/scripts/comment/new.js"></script>
+
+    {{#if post.editable}}
+      <script async defer src="/scripts/post/edit.js"></script>
+    {{/if}}
+
+  {{/if}}
 {{/if}}
