--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <header class="px-3 py-2 text-bg-dark">
-  <div class="d-flex flex-wrap align-items-center justify-content-between">
+  <div class="container d-flex flex-wrap align-items-center justify-content-between">
     <h1 class="display-1">bob blog</h1>
     {{> navbar}}
   </div>
