--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,11 @@
 <section class="container flex-grow-1">
-  <h2 class="fs-1">home</h2>
-  <h4 class="fs-5">all posts</h4>
-  <div class="d-flex flex-column w-50">
+  <div class="d-flex">
+    <div>
+      <h2 class="fs-1">home</h2>
+      <h4 class="fs-5">all posts</h4>
+    </div>
+  </div>
+  <div class="d-flex flex-column">
   {{#each posts}}
     {{> post-item}}
   {{/each}}
