--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -6,11 +6,11 @@
     {{> stylesheets}}
   </head>
   <body class="vh-100 d-flex flex-column">
-    {{> header}}
+    {{> components/header}}
     <section class="container flex-grow-1">
       {{{body}}}
     </section>
-    {{> footer}}
+    {{> components/footer}}
     {{> scripts}}
   </body>
 </html>
