--- a/src/views/partials/components/navbar.hbs
+++ b/src/views/partials/components/navbar.hbs
@@ -38,7 +38,7 @@
 
     {{#if logged_in}}
       <li>
-        <button id="logout-btn" type="button" class="btn btn-light">Logout</button>
+        <button id="logout-btn" type="button" class="btn btn-light">logout</button>
       </li>
     {{/if}}
   </ul>
