--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -10,7 +10,7 @@
   </div>
   <div class="d-flex flex-column">
   {{#each posts}}
-    {{> post-item}}
+    {{> components/post-item}}
   {{/each}}
   </div>
 </section>
