--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -7,7 +7,7 @@
   </div>
   <div class="d-flex flex-column">
   {{#each posts}}
-    {{> post-item}}
+    {{> components/post-item}}
   {{/each}}
   </div>
 </section>
