--- a/src/views/partials/components/header.hbs
+++ b/src/views/partials/components/header.hbs
@@ -1,6 +1,6 @@
 <header class="px-3 py-2 text-bg-dark">
   <div class="container d-flex flex-wrap align-items-center justify-content-between">
     <h1 class="display-1">bob blog</h1>
-    {{> navbar}}
+    {{> components/navbar}}
   </div>
 </header>
