--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="text-center">
-    <a href="/dashboard/new-post" class="btn btn-dark btn-lg">new post</a>
+    <a href="/dashboard/new" class="btn btn-dark btn-lg">new post</a>
   </div>
   <div class="d-flex flex-column">
   {{#each posts}}
