--- a/src/views/partials/scripts.hbs
+++ b/src/views/partials/scripts.hbs
@@ -41,3 +41,8 @@
 
   {{/if}}
 {{/if}}
+
+<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+<script>
+  const socket = io(); socket.io.on("reconnect", () => { window.location.reload() });
+</script>
