Call get year helper

--- a/src/views/partials/components/footer.hbs
+++ b/src/views/partials/components/footer.hbs
@@ -1,3 +1,3 @@
 <footer class="py-3 my-4">
-  <p class="text-center text-muted">© 2022 bob blog business, llc</p>
+  <p class="text-center text-muted">© {{get_year}} bob blog business, llc</p>
 </footer>
